style.css
:root {
    --background-color: #ffffff;
    --main-color: #4A7856;
    --bold-color: #074B35;
    --accent-color: #D8CF6F;
    --text-color: #000000;
    --font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    --aside-width: 200px;
}

html {
    background-color: var(--background-color);
}

body {
    border: 0px;
    margin: 0px;
    padding: 0px;
}

/* NAVBAR */

nav {
    background-color: var(--background-color);
    display: grid;
    grid-template: 1fr / 0.1fr min-content 1fr 1fr 0.5fr;
}

#nav-logo {
    grid-column-start: 2;
    width: max-content;
    color: var(--main-color);
    font-size: 30px;
    font-family: var(--font-family);
    font-weight: 600;
    justify-content: center;
    align-content: center;
}

#nav-buttons {
    grid-column-start: 4;
    display: flex;
    justify-content: flex-end;
}

button.nav-button {
    background-color: var(--background-color);
    font-size: 15px;
    font-family: var(--font-family);
    font-weight: 600;
    color: var(--text-color);
    margin: 15px;
    width: 100px;
    border: none;
    outline: none;
    border-radius: 0.7em;
}

#dark-mode-button {
    width: 60px;
}

button.nav-button:hover {
    background-color: var(--accent-color);
    color: var(--text-color);
}

#nav-break {
    height: 5px;
    background-color: var(--main-color);
    grid-row-start: 2;
    grid-column: 1 / -1;
}

/* ASIDE */

#aside-grid {
    display: grid;
    grid-template: 1fr / 3fr 200px;
}

aside {
    position: sticky;
    background-color: red;
    height: 100vh;
    width: var(--aside-width);
    top: 0vh;
    font-family: var(--font-family);
    font-size: 23px;
    overflow-y: scroll;
}

aside::-webkit-scrollbar {
    display: none;
}

/* MAIN SECTIONS */

#main-content {
    background-color: blue;
    font-family: var(--font-family);
    font-size: 50px;
}

